--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,25 +25,25 @@ jobs:
       - uses: actions/checkout@v4
 
       # Publish action by other contributor
-      - name: Logseq Publish
-        uses: pengx17/logseq-publish@main
-        with:
-          version: latest
+      # - name: Logseq Publish
+      #   uses: pengx17/logseq-publish@main
+      #   with:
+      #     version: latest
 
-      - name: add a nojekyll file
-        run: touch $GITHUB_WORKSPACE/www/.nojekyll
+      # - name: add a nojekyll file
+      #   run: touch $GITHUB_WORKSPACE/www/.nojekyll
 
-      - name: Deploy to GitHub pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: www # The folder the action should deploy.
-          clean: true
+      # - name: Deploy to GitHub pages
+      #   uses: JamesIves/github-pages-deploy-action@v4
+      #   with:
+      #     branch: gh-pages # The branch the action should deploy to.
+      #     folder: www # The folder the action should deploy.
+      #     clean: true
 
-      - name: deploy to firebase hosting live channel
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_NOTE_E3304 }}"
-          projectId: note-e3304
-          channelId: live
+      # - name: deploy to firebase hosting live channel
+      #   uses: FirebaseExtended/action-hosting-deploy@v0
+      #   with:
+      #     repoToken: "${{ secrets.GITHUB_TOKEN }}"
+      #     firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_NOTE_E3304 }}"
+      #     projectId: note-e3304
+      #     channelId: live
