--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,13 +25,13 @@ jobs:
       - uses: actions/checkout@v4
 
       # Publish action by other contributor
-      # - name: Logseq Publish
-      #   uses: pengx17/logseq-publish@main
-      #   with:
-      #     version: latest
+      - name: Logseq Publish
+        uses: pengx17/logseq-publish@main
+        with:
+          version: latest
 
-      # - name: add a nojekyll file
-      #   run: touch $GITHUB_WORKSPACE/www/.nojekyll
+      - name: add a nojekyll file
+        run: touch $GITHUB_WORKSPACE/www/.nojekyll
 
       # - name: Deploy to GitHub pages
       #   uses: JamesIves/github-pages-deploy-action@v4
