--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
 
       # Publish action by other contributor
       - name: Logseq Publish
-        uses: pengx17/logseq-publish@main
+        uses: pengx17/logseq-publish@0.1.8
         with:
           version: latest
 
