--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,6 +37,12 @@ jobs:
           branch: gh-pages # The branch the action should deploy to.
           folder: www # The folder the action should deploy.
           clean: true
+          
+      # Set up Node.js v20 for Firebase deployment
+      - name: Setup Node.js for Firebase
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
       - name: deploy to firebase hosting live channel
         uses: FirebaseExtended/action-hosting-deploy@v0
